--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
 		Learn how to configure a non-root public URL by running `npm run build`.
 		-->
 		<title>React App</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+		<script src="https://unpkg.com/@material-ui/core@latest/umd/material-ui.development.js" ></script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
